--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@
 				<h1>victor Ayo</h1>
 				<p>Data Analyst | Data Scientist <p>
 				<br />
-				I collect, transform and visualize data for business decisions </p>
+				I collect, transform, analyze and visualize data for business decisions </p>
+				<p>Certified Google Data Analytics Professional <p>
 			</div>
 
 		<!-- Main -->
